# tomcryptogram

./: .gitignore  BREAKTHROUGH_SUMMARY.md  CLAUDE.md  CMakeLists.txt  README.md  analysis_summary_1755143939.txt  analyze_candidates  analyze_candidates.cpp  csv_analysis  csv_analysis.cpp  large_scale_analyzer  large_scale_analyzer.cpp  large_scale_results_1755143939.csv  pattern_analysis.csv  pattern_analysisOLD.csv  pattern_visualizer.py  prime_factor_test.txt  simple_visualizer.py  strategic_candidates.txt  test_values.txt
.claude/: settings.local.json
EulerBrick/: CMakeLists.txt  RulesAndNotes.txt  euler_brick_search.cpp  euler_brick_search.h  main.cpp
EveryMap/: main.cpp
FiveMinuteTimer/: fiveminute.cpp
MagicSquares/: CMakeLists.txt  MagicSquare_data.cpp  MagicSquare_data.h  Notes  claude_chat.txt  main.cpp  mpz_only.cpp  mpz_only.h  squares_container.cpp  squares_container.h
MagicSquares/OutputFiles/: 20250226_221502.csv  20250226_221505.csv  20250226_221509.csv  20250226_221515.csv  20250226_221524.csv  20250226_221536.csv  20250226_221552.csv  20250226_221612.csv  20250226_221635.csv  20250226_221704.csv  20250226_221737.csv  20250226_221816.csv  20250226_221902.csv  20250226_221953.csv  20250226_222052.csv  20250226_222200.csv  20250226_222313.csv  20250226_222436.csv  20250226_222608.csv  20250226_222748.csv  20250226_222939.csv  20250226_223139.csv  20250226_223350.csv  20250226_223613.csv  20250226_223847.csv  20250226_224133.csv  27000-28000_20250226_225236.csv  28000-29000_20250226_225523.csv  29000-30000_20250226_225820.csv  30000-31000_20250226_230130.csv  31000-32000_20250226_230452.csv  32000-33000_20250226_230834.csv  33000-34000_20250226_231222.csv  34000-35000_20250226_231624.csv  35000-36000_20250226_232042.csv  36000-37000_20250226_232516.csv  37000-38000_20250226_233003.csv  38000-39000_20250226_233503.csv  39000-40000_20250226_234016.csv  40000-41000_20250226_234548.csv  (+51 more)
MultiThreading/: main.cpp
NoobyHabits/: CMakeLists.txt  Function_Arg_Order.cpp  Function_Arg_Order.h  Member_Init_Order_Matters.h  Timer.h  UsingNamespace.h  constexpr_sqrt.h  main.cpp
PowersOfFive/: CMakeLists.txt  PowersOfFive.md  main.cpp
TestFuncs/: main.cpp
WeirdNumbers/: CMakeLists.txt  main.cpp
src/: main.cpp
